<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_commitees"
            android:icon="@drawable/ic_committee"
            android:title="@string/commitees" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule"
            android:title="@string/schedule" />
        <item
            android:id="@+id/nav_media"
            android:icon="@drawable/ic_media"
            android:title="@string/media" />
    </group>

    <item android:title="More">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_more"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_contacts"
                android:icon="@drawable/ic_more"
                android:title="@string/contacts" />
        </menu>
    </item>

</menu>
